--- a/assets/launcher-ui/src/assets/main.css
+++ b/assets/launcher-ui/src/assets/main.css
@@ -131,5 +131,13 @@ footer {
 
 input[type="checkbox"] {
   display: inline-block;
-  margin-top: 0.25em;
+}
+
+.lh-100 {
+  line-height: 100%;
+}
+
+.py-1 {
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
