--- a/assets/launcher-ui/src/assets/base.css
+++ b/assets/launcher-ui/src/assets/base.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Noble Scarlet';
+  src: url('./msyhsb.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'SGM';
+  src: url('./sgm.woff2') format('woff2');
+}
+
 *,
 *::before,
 *::after {
@@ -8,27 +18,24 @@
   user-select: none;
   -webkit-user-drag: none;
   color-scheme: dark;
+  font-family:
+    SGM,
+    'Noble Scarlet',
+    'Segoe UI',
+    sans-serif;
+}
+
+option {
+  font-family:
+    'Noble Scarlet',
+    'Segoe UI',
+    sans-serif;
 }
 
 body {
   background: #212121;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
   font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeSpeed;
   overflow: hidden;
 }
